@@ -164,25 +164,9 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|facet
-operator|.
-name|taxonomy
-operator|.
-name|CategoryPath
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|index
 operator|.
-name|NumericDocValues
+name|AtomicReaderContext
 import|;
 end_import
 
@@ -194,14 +178,16 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|util
+name|queries
 operator|.
-name|Bits
+name|function
+operator|.
+name|FunctionValues
 import|;
 end_import
 
 begin_comment
-comment|/** Uses a {@link NumericDocValues} and accumulates  *  counts for provided ranges.  This is dynamic (does not  *  use the taxonomy index or anything from the index  *  except the NumericDocValuesField). */
+comment|/**  * Uses {@link RangeFacetRequest#getValues(AtomicReaderContext)} and accumulates  * counts for provided ranges.  */
 end_comment
 
 begin_class
@@ -212,63 +198,6 @@ name|RangeAccumulator
 extends|extends
 name|FacetsAccumulator
 block|{
-DECL|class|RangeSet
-specifier|static
-class|class
-name|RangeSet
-block|{
-DECL|field|ranges
-specifier|final
-name|Range
-index|[]
-name|ranges
-decl_stmt|;
-DECL|field|field
-specifier|final
-name|String
-name|field
-decl_stmt|;
-DECL|method|RangeSet
-specifier|public
-name|RangeSet
-parameter_list|(
-name|Range
-index|[]
-name|ranges
-parameter_list|,
-name|String
-name|field
-parameter_list|)
-block|{
-name|this
-operator|.
-name|ranges
-operator|=
-name|ranges
-expr_stmt|;
-name|this
-operator|.
-name|field
-operator|=
-name|field
-expr_stmt|;
-block|}
-block|}
-DECL|field|requests
-specifier|final
-name|List
-argument_list|<
-name|RangeSet
-argument_list|>
-name|requests
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|RangeSet
-argument_list|>
-argument_list|()
-decl_stmt|;
 DECL|method|RangeAccumulator
 specifier|public
 name|RangeAccumulator
@@ -356,42 +285,6 @@ literal|"only flat (dimension only) CategoryPath is allowed"
 argument_list|)
 throw|;
 block|}
-name|RangeFacetRequest
-argument_list|<
-name|?
-argument_list|>
-name|rfr
-init|=
-operator|(
-name|RangeFacetRequest
-argument_list|<
-name|?
-argument_list|>
-operator|)
-name|fr
-decl_stmt|;
-name|requests
-operator|.
-name|add
-argument_list|(
-operator|new
-name|RangeSet
-argument_list|(
-name|rfr
-operator|.
-name|ranges
-argument_list|,
-name|fr
-operator|.
-name|categoryPath
-operator|.
-name|components
-index|[
-literal|0
-index|]
-argument_list|)
-argument_list|)
-expr_stmt|;
 block|}
 block|}
 annotation|@
@@ -431,31 +324,27 @@ argument_list|()
 decl_stmt|;
 for|for
 control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|requests
+name|FacetRequest
+name|req
+range|:
+name|searchParams
 operator|.
-name|size
-argument_list|()
-condition|;
-name|i
-operator|++
+name|facetRequests
 control|)
 block|{
-name|RangeSet
-name|ranges
+name|RangeFacetRequest
+argument_list|<
+name|?
+argument_list|>
+name|rangeFR
 init|=
-name|requests
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
+operator|(
+name|RangeFacetRequest
+argument_list|<
+name|?
+argument_list|>
+operator|)
+name|req
 decl_stmt|;
 name|int
 index|[]
@@ -464,7 +353,7 @@ init|=
 operator|new
 name|int
 index|[
-name|ranges
+name|rangeFR
 operator|.
 name|ranges
 operator|.
@@ -479,48 +368,16 @@ range|:
 name|matchingDocs
 control|)
 block|{
-name|NumericDocValues
-name|ndv
+name|FunctionValues
+name|fv
 init|=
+name|rangeFR
+operator|.
+name|getValues
+argument_list|(
 name|hits
 operator|.
 name|context
-operator|.
-name|reader
-argument_list|()
-operator|.
-name|getNumericDocValues
-argument_list|(
-name|ranges
-operator|.
-name|field
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|ndv
-operator|==
-literal|null
-condition|)
-block|{
-continue|continue;
-comment|// no numeric values for this field in this reader
-block|}
-name|Bits
-name|docsWithField
-init|=
-name|hits
-operator|.
-name|context
-operator|.
-name|reader
-argument_list|()
-operator|.
-name|getDocsWithField
-argument_list|(
-name|ranges
-operator|.
-name|field
 argument_list|)
 decl_stmt|;
 specifier|final
@@ -562,38 +419,33 @@ operator|-
 literal|1
 condition|)
 block|{
+comment|// Skip missing docs:
+if|if
+condition|(
+operator|!
+name|fv
+operator|.
+name|exists
+argument_list|(
+name|doc
+argument_list|)
+condition|)
+block|{
+operator|++
+name|doc
+expr_stmt|;
+continue|continue;
+block|}
 name|long
 name|v
 init|=
-name|ndv
+name|fv
 operator|.
-name|get
+name|longVal
 argument_list|(
 name|doc
 argument_list|)
 decl_stmt|;
-comment|// Skip missing docs:
-if|if
-condition|(
-name|v
-operator|==
-literal|0
-operator|&&
-name|docsWithField
-operator|.
-name|get
-argument_list|(
-name|doc
-argument_list|)
-operator|==
-literal|false
-condition|)
-block|{
-name|doc
-operator|++
-expr_stmt|;
-continue|continue;
-block|}
 comment|// TODO: if all ranges are non-overlapping, we
 comment|// should instead do a bin-search up front
 comment|// (really, a specialized case of the interval
@@ -608,7 +460,7 @@ literal|0
 init|;
 name|j
 operator|<
-name|ranges
+name|rangeFR
 operator|.
 name|ranges
 operator|.
@@ -620,7 +472,7 @@ control|)
 block|{
 if|if
 condition|(
-name|ranges
+name|rangeFR
 operator|.
 name|ranges
 index|[
@@ -658,7 +510,7 @@ argument_list|<
 name|FacetResultNode
 argument_list|>
 argument_list|(
-name|ranges
+name|rangeFR
 operator|.
 name|ranges
 operator|.
@@ -674,7 +526,7 @@ literal|0
 init|;
 name|j
 operator|<
-name|ranges
+name|rangeFR
 operator|.
 name|ranges
 operator|.
@@ -691,11 +543,11 @@ argument_list|(
 operator|new
 name|RangeFacetResultNode
 argument_list|(
-name|ranges
+name|rangeFR
 operator|.
-name|field
+name|label
 argument_list|,
-name|ranges
+name|rangeFR
 operator|.
 name|ranges
 index|[
@@ -726,13 +578,9 @@ name|rootNode
 operator|.
 name|label
 operator|=
-operator|new
-name|CategoryPath
-argument_list|(
-name|ranges
+name|rangeFR
 operator|.
-name|field
-argument_list|)
+name|categoryPath
 expr_stmt|;
 name|rootNode
 operator|.
@@ -747,14 +595,7 @@ argument_list|(
 operator|new
 name|FacetResult
 argument_list|(
-name|searchParams
-operator|.
-name|facetRequests
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
+name|req
 argument_list|,
 name|rootNode
 argument_list|,
