@@ -22,6 +22,26 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|List
@@ -72,6 +92,22 @@ name|facet
 operator|.
 name|search
 operator|.
+name|FacetResultNode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|facet
+operator|.
+name|search
+operator|.
 name|FacetsAggregator
 import|;
 end_import
@@ -92,8 +128,86 @@ name|CategoryPath
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|AtomicReaderContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|NumericDocValues
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|queries
+operator|.
+name|function
+operator|.
+name|FunctionValues
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|queries
+operator|.
+name|function
+operator|.
+name|ValueSource
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|queries
+operator|.
+name|function
+operator|.
+name|valuesource
+operator|.
+name|LongFieldSource
+import|;
+end_import
+
 begin_comment
-comment|/**  * Facet request for dynamic ranges based on a  * NumericDocValues field.  This does not use the taxonomy  * index nor any indexed facet values.  *   * @lucene.experimental  */
+comment|/**  * A {@link FacetRequest} for dynamic ranges based on a {@link NumericDocValues}  * field or {@link ValueSource}. This does not use the taxonomy index nor any  * indexed facet values.  *   * @lucene.experimental  */
 end_comment
 
 begin_class
@@ -116,6 +230,19 @@ name|Range
 index|[]
 name|ranges
 decl_stmt|;
+DECL|field|label
+specifier|public
+specifier|final
+name|String
+name|label
+decl_stmt|;
+DECL|field|valueSource
+specifier|private
+specifier|final
+name|ValueSource
+name|valueSource
+decl_stmt|;
+comment|/**    * Create a request for the given ranges over the specified    * {@link NumericDocValues} field. The field will be used to as the root's    * {@link FacetResultNode} label.    */
 annotation|@
 name|SuppressWarnings
 argument_list|(
@@ -133,24 +260,21 @@ modifier|...
 name|ranges
 parameter_list|)
 block|{
-name|super
+name|this
 argument_list|(
+name|field
+argument_list|,
 operator|new
-name|CategoryPath
+name|LongFieldSource
 argument_list|(
 name|field
 argument_list|)
 argument_list|,
-literal|1
+name|ranges
 argument_list|)
 expr_stmt|;
-name|this
-operator|.
-name|ranges
-operator|=
-name|ranges
-expr_stmt|;
 block|}
+comment|/**    * Create a request for the given ranges over the specified    * {@link NumericDocValues} field. The field will be used to as the root's    * {@link FacetResultNode} label.    */
 annotation|@
 name|SuppressWarnings
 argument_list|(
@@ -194,6 +318,132 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Create a request for the given ranges over the specified    * {@link ValueSource}. The label will be used to as the root's    * {@link FacetResultNode} label.    */
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+DECL|method|RangeFacetRequest
+specifier|public
+name|RangeFacetRequest
+parameter_list|(
+name|String
+name|label
+parameter_list|,
+name|ValueSource
+name|valueSource
+parameter_list|,
+name|T
+modifier|...
+name|ranges
+parameter_list|)
+block|{
+name|super
+argument_list|(
+operator|new
+name|CategoryPath
+argument_list|(
+name|label
+argument_list|)
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|ranges
+operator|=
+name|ranges
+expr_stmt|;
+name|this
+operator|.
+name|valueSource
+operator|=
+name|valueSource
+expr_stmt|;
+name|this
+operator|.
+name|label
+operator|=
+name|label
+expr_stmt|;
+block|}
+comment|/**    * Create a request for the given ranges over the specified    * {@link ValueSource}. The label will be used to as the root's    * {@link FacetResultNode} label.    */
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+DECL|method|RangeFacetRequest
+specifier|public
+name|RangeFacetRequest
+parameter_list|(
+name|String
+name|label
+parameter_list|,
+name|ValueSource
+name|valueSource
+parameter_list|,
+name|List
+argument_list|<
+name|T
+argument_list|>
+name|ranges
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|label
+argument_list|,
+name|valueSource
+argument_list|,
+operator|(
+name|T
+index|[]
+operator|)
+name|ranges
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|Range
+index|[
+name|ranges
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Returns the {@link FunctionValues} for the given    * {@link AtomicReaderContext}. If the request was created over a    * {@link NumericDocValues} field, the respective {@link NumericDocValues} is    * returned.    */
+DECL|method|getValues
+specifier|public
+name|FunctionValues
+name|getValues
+parameter_list|(
+name|AtomicReaderContext
+name|context
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|valueSource
+operator|.
+name|getValues
+argument_list|(
+name|Collections
+operator|.
+name|emptyMap
+argument_list|()
+argument_list|,
+name|context
+argument_list|)
+return|;
+block|}
 annotation|@
 name|Override
 DECL|method|createFacetsAggregator
@@ -205,9 +455,13 @@ name|FacetIndexingParams
 name|fip
 parameter_list|)
 block|{
-return|return
-literal|null
-return|;
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|(
+literal|"this FacetRequest does not support categories aggregation and only works with RangeAccumulator"
+argument_list|)
+throw|;
 block|}
 block|}
 end_class
